add spring security log debug